--- a/index.html
+++ b/index.html
@@ -28,19 +28,35 @@
             cursor: pointer;
         }
 
+        .cell.win {
+            background-color: #e6ffee;
+        }
+
         table.center {
             margin-left: auto;
             margin-right: auto;
         }
+
+        #alert {
+            display: none;
+        }
+
     </style>
     <title>Hello, world!</title>
 </head>
 
 <body>
     <div class="container">
+        <div class="row justify-content-center mt-5">
+            <div class="col-5 text-center">
+                <div class="alert alert-success" id="alert">
+                    <strong id="vitoria">Vitoria</strong>
+                </div>
+            </div>
+        </div>
         <div class="row mt-5">
             <div class="col text-center">
-                <h2>Turno: <strong id="turn">PLAYER</strong></h2>
+                <h2>Turno de: <strong id="turn">PLAYER</strong></h2>
                 <br>
             </div>
         </div>
