--- a/index.html
+++ b/index.html
@@ -2,47 +2,12 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/styles.css">
-    <style>
-        body {
-            font-family: sans-serif;
-        }
-
-        .container {
-            margin-top: 15vh;
-        }
-
-        .cell {
-            width: 100px !important;
-            height: 100px !important;
-            border: solid 1px rgb(235, 235, 235);
-            text-align: center;
-            font-size: 50pt;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        .cell.win {
-            background-color: #e6ffee;
-        }
-
-        table.center {
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        #alert {
-            display: none;
-        }
-
-    </style>
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Jogo da velha</title>
 </head>
 
 <body>
@@ -109,10 +74,8 @@
             </div>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="assets/main.js"></script>
+    
+    <script src="js/game.js"></script>
 </body>
 
 </html>
