--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
     <div class="container">
-        <div class="row justify-content-center mt-5">
+        <div class="row justify-content-center mt-5 mb-5">
             <div class="col-5 text-center">
                 <div class="alert alert-success" id="alert">
                     <strong id="vitoria">Vitoria</strong>
                 </div>
             </div>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-5" id="row_turn">
             <div class="col text-center">
                 <h2>Turno de: <strong id="turn">PLAYER</strong></h2>
                 <br>
